[package]
name = "pfly_rust"
description = "A crate to interact with the projectFly X-Plane IPC service."
version = "0.1.0"
authors = ["Skye Viau <skye.viau@outlook.com>"]
license = " AGPL-3.0-or-later"
homepage = "https://gitlab.com/pretzelca/pfly_rust"
repository = "https://gitlab.com/pretzelca/pfly_rust"
keywords = ["projecfly", "flight-simulation", "xplane"]
categories = ["api-bindings"]
readme = "README.md"
edition = "2018"

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
socket2 = { version = "0.3.12", features = ["unix"] }
bincode = "1.3.1"
hex = "0.4.2"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"